--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^1.0.0",
     "express": "~4.2.0",
     "jade": "~1.3.0",
+    "mongoose": "^3.8.18",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0"
   }
